# neural_net

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: .ann.cpp.swp  W_ARR.txt  ann-demo.cpp  ann-demo.h  ann.cpp  ann.cu  ann.h  compuler  tests.cpp  tests.h
testing/: testing.ods
